# atlassian-python-api

./: .dockerignore  .env.example  .flake8  .gitbugtraq  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile.qa  Dockerfile.standalone  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  README_JIRA_V3_SERVER_TESTS.md  README_JIRA_V3_TESTS.md  README_TEST_SCRIPTS.md  TESTING_SETUP.md  atlassian-python-api.code-workspace  confluence-v2-api-research.md  confluence_v2_implementation_checklist.md  get_valid_spaces.py  jira.py  jira_v3_implementation_checklist.md  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_integration_tests.sh  run_jira_v3_tests.sh  setup.cfg  setup.py  test_link_parsing.py  test_pages.py  test_search.py  test_url_fix.py  (+2 more)
.codeboarding/: Atlassian Platform & Marketplace Clients.md  Bamboo API Client.md  Bitbucket API Client.md  Confluence API Client.md  Jira Ecosystem Clients.md  REST Client Core.md  Utility & Error Handling.md  on_boarding.md
.github/: bump_version
.travis/: bump_version
atlassian/: VERSION  __init__.py  adf.py  assets.py  bamboo.py  bitbucket.py  cloud_admin.py  confluence.py  confluence.py.bak  confluence_base.py  confluence_v2.py  constants.py  crowd.py  errors.py  insight.py  jira.py  jira8.py  jira_adf.py  jira_models.py  marketplace.py  portfolio.py  request_utils.py  rest_client.py  service_desk.py  stash.py  statuspage.py  typehints.py  utils.py  xray.py
docs/: CNAME  bamboo.rst  bitbucket.rst  cloud_admin.rst  conf.py  confluence.rst  jira.rst  (+13 more)
(+515 files in other folders)
